modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/parser/errors/variable_conflicts_for_variable.gd
func test():
	var TEST = 1
	for TEST in 2:
		pass
